--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
     <!-- </div> -->
 
     <script src="js/landing.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 
 </html>
