--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
         </div> -->
 
     <!-- </div> -->
-    <script src="../socket.io/socket.io.js"></script>
     <script src="js/landing.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
 </body>
 
