--- a/public/room.html
+++ b/public/room.html
@@ -104,8 +104,8 @@
             </div>
         </div>
     </div>
-    <script src="../socket.io/socket.io.js"></script>
     <script src="js/room.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 
 </html>
