--- a/public/room.html
+++ b/public/room.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <script src="js/room.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 </body>
 
 </html>
