--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
     <!-- </div> -->
     <script src="js/landing.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 
 </body>
 
