--- a/public/room.html
+++ b/public/room.html
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-    <script src="https://https://chat-meet-59574.web.app/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/socket.io-2.3.0.js"></script>
     <script src="js/room.js"></script>
 </body>
 
