--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         </div> -->
 
     <!-- </div> -->
-    <script src="https://cdn.socket.io/socket.io-2.3.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
     <script src="js/landing.js"></script>
 
 </body>
