--- a/public/room.html
+++ b/public/room.html
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.socket.io/socket.io-2.3.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
     <script src="js/room.js"></script>
 </body>
 
