--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
     <!-- </div> -->
     <script src="./socket.io/socket.io.js"></script>
-    <script src="js/landing.js"></script>
+    <script src="./js/landing.js"></script>
 
 </body>
 
