--- a/public/room.html
+++ b/public/room.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <script src="./socket.io/socket.io.js"></script>
-    <script src="js/room.js"></script>
+    <script src="./js/room.js"></script>
 </body>
 
 </html>
