--- a/public/room.html
+++ b/public/room.html
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-    <script src="https://chat-meet-59574.web.app/socket.io/socket.io.js"></script>
+    <script src="https://chat-meet-59574.web.app:3000/socket.io/socket.io.js"></script>
     <script src="./js/room.js"></script>
 </body>
 
