--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         </div> -->
 
     <!-- </div> -->
-    <script src="https://https//chat-meet-59574.web.app/socket.io.min.js "></script>
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/landing.js"></script>
 
 </body>
